# yet-another-make

./: .gitignore  README.md  howtoPrepareForBuild.txt  todo.txt  yam.sln
accessMonitor/: FileAccess.cpp  FileAccess.h  FileAccessEvents.cpp  FileAccessEvents.h  FileNaming.cpp  FileNaming.h  Inject.cpp  Inject.h  Log.cpp  Log.h  LogFile.cpp  LogFile.h  Monitor.cpp  Monitor.h  MonitorFiles.cpp  MonitorFiles.h  MonitorLogging.cpp  MonitorLogging.h  MonitorProcess.cpp  MonitorProcess.h  MonitorProcesses.cpp  MonitorProcesses.h  MonitorThreadsAndProcesses.cpp  MonitorThreadsAndProcesses.h  Patch.cpp  Patch.h  PatchDetours.cpp  PatchIAT.cpp  PatchProcess.cpp  PatchProcess.h  Process.cpp  Process.h  RemoteSession.cpp  Session.cpp  Session.h  accessMonitor.cpp  listDLLExternals.cpp  patchDLL.cpp  remoteTest.cpp  test.cpp  (+2 more)
accessMonitorDll/: accessMonitorDll.vcxproj  accessMonitorDll.vcxproj.filters
accessMonitorLib/: accessMonitorLib.vcxproj  accessMonitorLib.vcxproj.filters
btree/: BTree.h  BTreeIterator.h  Compare.h  CompareKey.h  Forest.h  Page.h  PageFunctions.h  PageFunctions_Imp.h  PagePool.cpp  PagePool.h  PagePool_Imp.h  PageStreamASCII.h  PageStreamASCII_Imp.h  PersistentPagePool.cpp  PersistentPagePool.h  StreamingBTree.h  StreamingBTreeIterator.h  String2StreamBTree.h  String2StreamBTree_Imp.h  String2StringTree.h  String2StringTree_Imp.h  String2ValueTree.h  Trail.h  TreeBase.h  TreeBase_Imp.h  Types.cpp  Types.h  Value2StringTree.h  ValueStreamer.h  btree.vcxproj  testBTree.cpp  (+8 more)
cli/: .gitignore  CMakeLists.txt  CMakeSettings.json  OptionParser.h  cli.cpp  cli.h
(+478 files in other folders)
